[tool.poetry]
name = "pulumi-components"
version = "0.1.0"
description = ""
authors = ["Mohammad Ayub <asimayub81@gmail.com>"]
readme = "README.md"
packages = [{include = "pulumi_components"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
