[tool.poetry]
name = "pulumi-components"
version = "0.1.0"
description = ""
authors = ["Mohammad Ayub <asimayub81@gmail.com>"]
readme = "README.md"
packages = [{include = "pulumi_components"}]

[tool.poetry.dependencies]
python = "^3.10"
pulumi = "^3.50.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
